atualizado tamanho das fontes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Galeria Eminem's Album</h1>
        
         <div class="musical-container">
-            <div linha1>
+            <div class="linha1">
               <a href="https://www.discogs.com/release/4536253-Eminem-Dont-Call-Me-Marshall?srsltid=AfmBOopx0Ix7XX28_maK-ssDqAR07Hs-sbLmH0CiNwvwVc-VNR4JEuwq">
                   <img src="img/Dont Call Me Marshall 1.webp" alt="Facebook">
                   <h2>Dont Call Me Marshall</h2>
@@ -28,7 +28,7 @@
               </a>
             </div>
 
-            <div linha2>
+            <div class="linha2">
             <a href="https://en.wikipedia.org/wiki/The_Death_of_Slim_Shady_(Coup_de_Gr%C3%A2ce)">
                 <img src="img/E 1.jpg" alt="E">
                 <h2>E</h2>
@@ -43,7 +43,7 @@
             </a>
             </div>
 
-            <div linha 3>
+            <div class="linha3">
               <a href="https://en.wikipedia.org/wiki/Relapse_(Eminem_album)">
                   <img src="img/Relapse 1.jpg" alt="release">
                   <h2>Relapse</h2>
